@@ -2276,6 +2276,17 @@
       </component>
     </version>
   </module>
+  <module name="mcatalog">
+    <version release="HEAD">
+      <component name="mcatalog" dir="mcatalog" group="extras">
+        <podir dir="po"/>
+        <potname name="mcatalog.pot"/>
+        <branch name="HEAD"/>
+        <regenerate/>
+        <download/>
+      </component>
+    </version>
+  </module>
   <module name="medusa">
     <version release="HEAD">
       <component name="medusa" dir="medusa" group="extras">
@@ -2839,10 +2850,10 @@
     <version release="gnome-2.10">
       <component name="totem" dir="totem" group="desktop">
         <podir dir="po"/>
-	<potname name="totem.pot"/>
-	<branch name="HEAD"/>
-	<regenerate/>
-	<download/>
+        <potname name="totem.pot"/>
+        <branch name="gnome-2-10"/>
+        <regenerate/>
+        <download/>
       </component>
     </version>
   </module>
