@@ -1,5 +1,10 @@
 2005-03-21  Christian Rose  <menthos@menthos.com>
 
+	* translation-status.xml: Added mcatalog.
+	totem has been branched.
+
+2005-03-21  Christian Rose  <menthos@menthos.com>
+
 	* translation-status.xml: Added update-manager.
 
 2005-03-20  Danilo Šegan  <dsegan@gmx.net>
